classDiagram
    direction LR

    class WalkableRobot {
        <<interface>>
        +walk()
    }
    class NormalWalk {
        +walk()
    }
    class NoWalk {
        +walk()
    }
    WalkableRobot <|.. NormalWalk
    WalkableRobot <|.. NoWalk

    class TalkableRobot {
        <<interface>>
        +talk()
    }
    class NormalTalk {
        +talk()
    }
    class NoTalk {
        +talk()
    }
    TalkableRobot <|.. NormalTalk
    TalkableRobot <|.. NoTalk

    class FlyableRobot {
        <<interface>>
        +fly()
    }
    class NormalFly {
        +fly()
    }
    class NoFly {
        +fly()
    }
    FlyableRobot <|.. NormalFly
    FlyableRobot <|.. NoFly

    class Robot {
        <<abstract>>
        #walkBehavior: WalkableRobot*
        #talkBehavior: TalkableRobot*
        #flyBehavior: FlyableRobot*
        +walk()
        +talk()
        +fly()
        +projection()*
    }

    class CompanionRobot {
        +projection()
    }
    class WorkerRobot {
        +projection()
    }

    Robot <|-- CompanionRobot
    Robot <|-- WorkerRobot

    Robot *-- WalkableRobot : has-a
    Robot *-- TalkableRobot : has-a
    Robot *-- FlyableRobot : has-a
